# stylus-uniswap-v2

./: Cargo.toml
.cargo/: config.toml
src/: erc20.rs  lib.rs  main.rs
